RESOLVED FIXED174444
Style fix. Replace strongThis with protectedThis.
https://bugs.webkit.org/show_bug.cgi?id=174444
Summary Style fix. Replace strongThis with protectedThis.
Jeremy Jones
Reported 2017-07-12 17:21:18 PDT
Style fix. Replace strongThis with protectedThis.
Attachments
Patch (11.99 KB, patch)
2017-07-12 17:23 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-07-12 17:23:04 PDT
WebKit Commit Bot
Comment 2 2017-07-13 11:21:37 PDT
Comment on attachment 315314 [details] Patch Clearing flags on attachment: 315314 Committed r219457: <http://trac.webkit.org/changeset/219457>
WebKit Commit Bot
Comment 3 2017-07-13 11:21:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.