Style fix. Replace strongThis with protectedThis. https://bugs.webkit.org/show_bug.cgi?id=174444

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-13
Reviewed by Eric Carlson.

Rename, no behavior change.

Source/WebCore:

* Modules/webaudio/AudioScheduledSourceNode.cpp:
(WebCore::AudioScheduledSourceNode::finish):
* platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::maybeBecomeReadyForMoreMediaData):
(WebCore::WebCoreDecompressionSession::enqueueSample):
(WebCore::WebCoreDecompressionSession::handleDecompressionOutput):
(WebCore::WebCoreDecompressionSession::enqueueDecodedSample):
(WebCore::WebCoreDecompressionSession::requestMediaDataWhenReady):
(WebCore::WebCoreDecompressionSession::flush):

Source/WebKit2:

* WebProcess/cocoa/WebVideoFullscreenManager.mm:
(WebKit::WebVideoFullscreenManager::didSetupFullscreen):
(WebKit::WebVideoFullscreenManager::didEnterFullscreen):
(WebKit::WebVideoFullscreenManager::didExitFullscreen):
(WebKit::WebVideoFullscreenManager::didCleanupFullscreen):

Canonical link: https://commits.webkit.org/191285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219457 268f45cc-cd09-0410-ab3c-d52691b4dbfc